Favoriler,sepet sayfaları eklendi ve  ürün detay sayfası ile  üst giyim sayfaları güncellendi

--- a/blouse.html
+++ b/blouse.html
@@ -68,8 +68,8 @@
                 <div class="hesap-menu">
                     <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
                     <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                    <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                    <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                    <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                    <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
                 </div>
 
             </div>
@@ -112,100 +112,90 @@
     <div class="product-card">
       <a href="productDetail.html?id=1"><img src="images/urunler/blouse/dusuk-omuz-blouse.jpg" alt=" Beyaz Düşük Omuz Bluz">
       </a>
-      <h3><a href="productDetail.html?id=1"></a>Beyaz Düşük Omuz Bluz</h3>
+      <h3><a href="productDetail.html?id=1">Beyaz Düşük Omuz Bluz</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="1">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
       <a href="productDetail.html?id=2"><img src="images/urunler/blouse/madonna-yaka-blouse.jpg" alt=" Siyah Madonna Yaka Bluz">
       </a>
-      <h3><a href="productDetail.html?id=2"></a> Siyah Madonna Yaka Bluz</h3>
+      <h3><a href="productDetail.html?id=2"> Siyah Madonna Yaka Bluz</a></h3>
       <p>299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="2">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
       <a href="productDetail.html?id=3"><img src="images/urunler/blouse/antrasit-madonna-blouse.jpg" alt="Antrasit Madonna Yaka Düğmeli Bluz">
       </a>
-      <h3><a href="productDetail.html?id=3"></a>Antrasit Madonna Yaka Düğmeli Bluz</h3>
+      <h3><a href="productDetail.html?id=3">Antrasit Madonna Yaka Düğmeli Bluz</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="3">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
       <a href="productDetail.html?id=4"><img src="images/urunler/blouse/beyaz-body-blouse.jpg" alt="Beyaz Bodysuit">
       </a>
-      <h3><a href="productDetail.html?id=4"></a>Beyaz Bodysuit</h3>
+      <h3><a href="productDetail.html?id=4">Beyaz Bodysuit</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="4">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
       <a href="productDetail.html?id=5"><img src="images/urunler/blouse/yagyesil-body-blouse.jpg" alt="Yağ Yeişi Bodysuit">
       </a>
-      <h3><a href="productDetail.html?id=5"></a>Yağ Yeşili Bodysuit</h3>
+      <h3><a href="productDetail.html?id=5">Yağ Yeşili Bodysuit</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="5">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
       <a href="productDetail.html?id=6"><img src="images/urunler/blouse/siyah-body-blouse.jpg" alt="Siyah Body">
       </a>
-      <h3><a href="productDetail.html?id=6"></a>Siyah Body</h3>
+      <h3><a href="productDetail.html?id=6">Siyah Body</a></h3>
       <p>279.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="6">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
       <a href="productDetail.html?id=7"><img src="images/urunler/blouse/haki-softtouch-blouse.jpg" alt="Haki Soft Touch Bluz">
       </a>
-      <h3><a href="productDetail.html?id=7"></a>Haki Soft Touch Bluz</h3>
+      <h3><a href="productDetail.html?id=7">Haki Soft Touch Bluz</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="7">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
       <a href="productDetail.html?id=8"><img src="images/urunler/blouse/kahve-softtouch-blouse.jpg" alt="Kahve Soft Touch Bluz">
       </a>
-      <h3><a href="productDetail.html?id=8"></a>Kahve Soft Touch Bluz</h3>
+      <h3><a href="productDetail.html?id=8">Kahve Soft Touch Bluz</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="8">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
       <a href="productDetail.html?id=89"><img src="images/urunler/blouse/kayıkyaka-beyaz-blouse.jpg" alt="Kayık Yaka Beyaz Bluz">
       </a>
-      <h3><a href="productDetail.html?id=89"></a>Kayık Yaka Beyaz Bluz</h3>
+      <h3><a href="productDetail.html?id=89">Kayık Yaka Beyaz Bluz</a></h3>
       <p>329.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="89">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10-->
     <div class="product-card">
       <a href="productDetail.html?id=90"><img src="images/urunler/blouse/straplez-siyah-blouse.jpg" alt="Straplez Siyah Bluz">
       </a>
-      <h3><a href="productDetail.html?id=90"></a>Straplez Siyah Bluz</h3>
+      <h3><a href="productDetail.html?id=90">Straplez Siyah Bluz</a></h3>
       <p>419.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="90">♥</button>
     </div>
 
 
@@ -262,10 +252,11 @@
 <!--Script Dosyaları-->
 <!--product.js dosyası önce verilmeli-->
 <script src="js/products.js"></script>
+<script src="js/shirts.js"></script>
 <script src="js/search.js"></script>
 <script src="js/header.js"></script>
 <script src="js/user.js"></script>
-<script src="js/shirts.js"></script>
+
 
 
 
