--- a/shirts.html
+++ b/shirts.html
@@ -68,8 +68,8 @@
                 <div class="hesap-menu">
                     <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
                     <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                    <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                    <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                    <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                    <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
                 </div>
 
             </div>
@@ -116,8 +116,7 @@
       </a>
       <h3><a href="productDetail.html?id=49">Oversize Beyaz Gömlek</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="49">♥</button>
     </div>
     
 
@@ -128,8 +127,7 @@
       </a>
       <h3><a href="productDetail.html?id=50">Oversize Pembe Gömlek</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="50">♥</button>
     </div>
     
 
@@ -137,80 +135,72 @@
     <div class="product-card">
       <a href="productDetail.html?id=51"><img src="images/urunler/shirts/kahve-shirt.jpg" alt="Overize Kahverengi Gömlek">
       </a>
-       <h3><a href="productDetail.html?id=51"></a>Oversize Kahverengi Gömlek</h3>
+       <h3><a href="productDetail.html?id=51">Oversize Kahverengi Gömlek</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="51">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
       <a href="productDetail.html?id=52"><img src="images/urunler/shirts/pensli-haki-shirt.jpg" alt="Haki Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=52"></a>Haki Gömlek</h3>
+      <h3><a href="productDetail.html?id=52">Haki Gömlek</a></h3>
       <p>489.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="52">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
       <a href="productDetail.html?id=53"><img src="images/urunler/shirts/baglama-siyah-shirt.jpg" alt="Bağlama Siyah Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=53"></a>Bağlama Sİyah Gömlek</h3>
+      <h3><a href="productDetail.html?id=53">Bağlama Sİyah Gömlek</a></h3>
       <p>429.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="53">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
       <a href="productDetail.html?id=54"><img src="images/urunler/shirts/kot-shirt.jpg" alt="Kot Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=54"></a>Kot Gömlek</h3>
+      <h3><a href="productDetail.html?id=54">Kot Gömlek</a></h3>
       <p>519.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="54">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
       <a href="productDetail.html?id=55"><img src="images/urunler/shirts/cizgili-mavi-shirt.jpg" alt="Mavi Çizgili Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=55"></a>Mavi Çizgili Gömlek</h3>
+      <h3><a href="productDetail.html?id=55">Mavi Çizgili Gömlek</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="55">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
       <a href="productDetail.html?id=56"><img src="images/urunler/shirts/korse-siyah-shirt.jpg" alt="Korse Siyah Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=56"></a>Korse Siyah Gömlek</h3>
+      <h3><a href="productDetail.html?id=56">Korse Siyah Gömlek</a></h3>
       <p>429.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="56">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
       <a href="productDetail.html?id=57"><img src="images/urunler/shirts/gri-shirt.jpg" alt="Gri Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=57"></a>Gri Gömlek</h3>
+      <h3><a href="productDetail.html?id=57">Gri Gömlek</a></h3>
       <p>359.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="57">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
       <a href="productDetail.html?id=58"><img src="images/urunler/shirts/oversize-siyah-shirt.jpg" alt="Oversize Siyah Gömlek">
       </a>
-      <h3><a href="productDetail.html?id=58"></a>Oversize Siyah Gömlek</h3>
+      <h3><a href="productDetail.html?id=58">Oversize Siyah Gömlek</a></h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="58">♥</button>
     </div>
 
 
@@ -267,12 +257,13 @@
 
 
   <!--Script-->
-  <!--product.js dosyası önce verilmeli-->
+  <!--product.js dosyası önce verilmeli- bu sıra önemli-->
   <script src="js/products.js"></script>
+  <script src="js/shirts.js"></script>
   <script src="js/search.js"></script>
   <script src="js/header.js"></script>
   <script src="js/user.js"></script>
-  <script src="js/shirts.js"></script>
+  
   
   
 
