--- a/dress.html
+++ b/dress.html
@@ -68,8 +68,8 @@
                 <div class="hesap-menu">
                     <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
                     <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                    <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                    <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                    <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                    <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
                 </div>
 
             </div>
@@ -112,100 +112,90 @@
     <div class="product-card">
       <a href="productDetail.html?id=19"><img src="images/urunler/dress/dısney-dres.jpg" alt="Dısney Beyaz Elbise">
       </a>
-      <h3><a href="productDetail.html?id=19"></a>Dısney Beyaz Elbise</h3>
+      <h3><a href="productDetail.html?id=19">Dısney Beyaz Elbise</a></h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="19">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
       <a href="productDetail.html?id=20"><img src="images/urunler/dress/denim-dres.jpg" alt="Denim Elbise">
       </a>
-      <h3><a href="productDetail.html?id=20"></a>Denim Elbise</h3>
+      <h3><a href="productDetail.html?id=20">Denim Elbise</a></h3>
       <p>569.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="20">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
       <a href="productDetail.html?id=21"><img src="images/urunler/dress/baglama-beyaz-dres.jpg" alt="Bağlamalı Beyaz Elbise">
       </a>
-      <h3><a href="productDetail.html?id=21"></a>Bağlamalı Beyaz Elbise</h3>
+      <h3><a href="productDetail.html?id=21">Bağlamalı Beyaz Elbise</a></h3>
       <p>779.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="21">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
       <a href="productDetail.html?id=22"><img src="images/urunler/dress/dusuk-omuz-mavi-dres.jpg" alt="Düşük Omuz Mavi Elbise">
       </a>
-      <h3><a href="productDetail.html?id=22"></a>Düşük Omuz Mavi Elbise</h3>
+      <h3><a href="productDetail.html?id=22">Düşük Omuz Mavi Elbise</a></h3>
       <p>579.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="22">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
       <a href="productDetail.html?id=23"><img src="images/urunler/dress/madonna-yaka-mavi-dres.jpg" alt="Madonna Yaka Mavi Elbise">
       </a>
-      <h3><a href="productDetail.html?id=23"></a>Madonna Yaka Mavi Elbise</h3>
+      <h3><a href="productDetail.html?id=23">Madonna Yaka Mavi Elbise</a></h3>
       <p>679.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="23">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
       <a href="productDetail.html?id=24"><img src="images/urunler/dress/kemerli-tensel-antrasit-dres.jpg" alt="Kemerli Antrasit Elbise">
       </a>
-      <h3><a href="productDetail.html?id=24"></a>Kemerli Antrasit Elbise</h3>
+      <h3><a href="productDetail.html?id=24">Kemerli Antrasit Elbise</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="24">♥</button>
     </div>
 
      <!-- Statik Ürün Kartı 7 -->
      <div class="product-card">
       <a href="productDetail.html?id=25"><img src="images/urunler/dress/kemerli-tensel-haki-dres.jpg" alt="Kemerli Haki Elbise">
       </a>
-      <h3><a href="productDetail.html?id=25"></a>Kemerli Haki Elbise</h3>
+      <h3><a href="productDetail.html?id=25">Kemerli Haki Elbise</a></h3>
       <p>379.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="25">♥</button>
     </div>
 
      <!-- Statik Ürün Kartı 8 -->
      <div class="product-card">
       <a href="productDetail.html?id=26"><img src="images/urunler/dress/siyah-kaskorse-dres.jpg" alt="Siyah Kaşkorse Elbise">
       </a>
-      <h3><a href="productDetail.html?id=26"></a>Siyah Kaşkorse Elbise</h3>
+      <h3><a href="productDetail.html?id=26">Siyah Kaşkorse Elbise</a></h3>
       <p>549.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="26">♥</button>
     </div>
 
      <!-- Statik Ürün Kartı 9 -->
      <div class="product-card">
       <a href="productDetail.html?id=27"><img src="images/urunler/dress/straplez-kot-dres.jpg" alt="Straplez Denim Elbise">
       </a>
-      <h3><a href="productDetail.html?id=27"></a>Straplez Denim Elbise</h3>
+      <h3><a href="productDetail.html?id=27">Straplez Denim Elbise</a></h3>
       <p>789.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="27">♥</button>
     </div>
 
      <!-- Statik Ürün Kartı 10 -->
      <div class="product-card">
       <a href="productDetail.html?id=28"><img src="images/urunler/dress/uzunkollu-dantel-beyaz-dres.jpg" alt="Uzun Kollu Dantel Beyaz Elbise">
       </a>
-      <h3><a href="productDetail.html?id=28"></a>Uzun kollu Dantel Beyaz Elbise</h3>
+      <h3><a href="productDetail.html?id=28">Uzun kollu Dantel Beyaz Elbise</a></h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="28">♥</button>
     </div>
 
 
@@ -262,10 +252,11 @@
   <!--Script-->
   <!--product.js dosyası önce verilmeli-->
   <script src="js/products.js"></script>
+  <script src="js/shirts.js"></script>
   <script src="js/search.js"></script>
   <script src="js/header.js"></script>
   <script src="js/user.js"></script>
-  <script src="js/shirts.js"></script>
+  
   
   
   
