alt ve dış giyim görselleriyle beraber güncellendi

--- a/jackets.html
+++ b/jackets.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -106,7 +107,6 @@
       </a>
       <h3><a href="productDetail.html?id=29"></a>Bej Kürk Ceket</h3>
       <p>799.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -116,7 +116,6 @@
       </a>
       <h3><a href="productDetail.html?id=30"></a> Bej Kuşaklı Ceket</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -126,7 +125,6 @@
       </a>
       <h3><a href="productDetail.html?id=31"></a>Beyaz Crop Ceket </h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -136,7 +134,6 @@
       </a>
       <h3><a href="productDetail.html?id=32"></a>Siyah Çizgili Oversize Ceket</h3>
       <p>549.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -146,7 +143,6 @@
       </a>
       <h3><a href="productDetail.html?id=33"></a>Mavi Denim Ceket</h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -156,7 +152,6 @@
       </a>
       <h3><a href="productDetail.html?id=34"></a>Kahve Deri Ceket</h3>
       <p>799.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -166,7 +161,6 @@
       </a>
       <h3><a href="productDetail.html?id=35"></a>Kahve Kısa Ceket</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -176,7 +170,6 @@
       </a>
       <h3><a href="productDetail.html?id=36"></a>Lacivert Belden Oturmalı Ceket</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -186,7 +179,6 @@
       </a>
       <h3><a href="productDetail.html?id=37"></a>Leopar Desenli Ceket</h3>
       <p>899.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -196,7 +188,6 @@
       </a>
       <h3><a href="productDetail.html?id=38"></a>Belden Oturmalı Denim Ceket</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -237,6 +228,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -253,6 +245,7 @@
   <script src="js/header.js"></script>
   <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
