--- a/pants.html
+++ b/pants.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -107,7 +108,6 @@
       </a>
       <h3><a href="productDetail.html?id=39"></a>Çizgili Kumaş Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -117,7 +117,6 @@
       </a>
       <h3><a href="productDetail.html?id=40"></a> Beyaz Keten Pantolon</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -127,7 +126,6 @@
       </a>
       <h3><a href="productDetail.html?id=41"></a>Pembe Kumaş Pantolon </h3>
       <p>549.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -137,7 +135,6 @@
       </a>
       <h3><a href="productDetail.html?id=42"></a>Kahve Palazzo Pantolon</h3>
       <p>549.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -147,7 +144,6 @@
       </a>
       <h3><a href="productDetail.html?id=43"></a>Leopar Desenli Jean</h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -157,7 +153,6 @@
       </a>
       <h3><a href="productDetail.html?id=44"></a>Deri Pantolon</h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -167,7 +162,6 @@
       </a>
       <h3><a href="productDetail.html?id=45"></a>Eskitme Wide Jean</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -177,7 +171,6 @@
       </a>
       <h3><a href="productDetail.html?id=46"></a>İspanyol Paça Beyaz Jean</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -187,7 +180,6 @@
       </a>
       <h3><a href="productDetail.html?id=47"></a>Pudra Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -197,7 +189,6 @@
       </a>
       <h3><a href="productDetail.html?id=48"></a>Antrasit Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -238,6 +229,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -254,6 +246,7 @@
   <script src="js/header.js"></script>
   <script src="js/pants.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
