--- a/trenchcoats.html
+++ b/trenchcoats.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -105,7 +106,6 @@
       <a href=""></a>
       <h3><a href="productDetail.html?id=79"></a>Antrasit Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -115,7 +115,6 @@
       </a>
       <h3><a href="productDetail.html?id=80"></a> Bej Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -125,7 +124,6 @@
       </a>
       <h3><a href="productDetail.html?id=81"></a>Deri Maxi Trençkot </h3>
       <p>1499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -135,7 +133,6 @@
       </a>
       <h3><a href="productDetail.html?id=82"></a>Haki Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -145,7 +142,6 @@
       </a>
       <h3><a href="productDetail.html?id=83"></a>Antrasit Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -155,7 +151,6 @@
       </a>
       <h3><a href="productDetail.html?id=84"></a>Bordo Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -165,7 +160,6 @@
       </a>
       <h3><a href="productDetail.html?id=85"></a>Orta Boy Denim Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -175,7 +169,6 @@
       </a>
       <h3><a href="productDetail.html?id=86"></a>Orta Boy Deri Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -185,7 +178,6 @@
       </a>
       <h3><a href="productDetail.html?id=87"></a>Haki Orta Boy Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -195,7 +187,6 @@
       </a>
       <h3><a href="productDetail.html?id=88"></a>Lacivert Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -236,6 +227,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -252,6 +244,7 @@
   <script src="js/header.js"></script>
   <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
