--- a/coats.html
+++ b/coats.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -106,7 +107,6 @@
       </a>
       <h3><a href="productDetail.html?id=9"></a>Acı Kahve Kısa Kürk</h3>
       <p>1299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -116,7 +116,6 @@
       </a>
       <h3><a href="productDetail.html?id=10"></a>Antrasit Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -126,7 +125,6 @@
       </a>
       <h3><a href="productDetail.html?id=11"></a>Bej Maxi Kaşe Kaban </h3>
       <p>1299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -136,7 +134,6 @@
       </a>
       <h3><a href="productDetail.html?id=12"></a>Çizgili Kısa Kaban</h3>
       <p>1199.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -146,7 +143,6 @@
       </a>
       <h3><a href="productDetail.html?id=13"></a>Kahve Denim Detaylı Mont</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -156,7 +152,6 @@
       </a>
       <h3><a href="productDetail.html?id=14"></a>Kahve Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -166,7 +161,6 @@
       </a>
       <h3><a href="productDetail.html?id=15"></a>Kürklü Siyah Kaşe Kaban</h3>
       <p>1499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -176,7 +170,6 @@
       </a>
       <h3><a href="productDetail.html?id=16"></a>Siyah Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -186,7 +179,6 @@
       </a>
       <h3><a href="productDetail.html?id=17"></a>Taş Renk Bağlamalı Mont</h3>
       <p>999.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -196,7 +188,6 @@
       </a>
       <h3><a href="productDetail.html?id=18"></a>Taş Renk Orta Boy Kürk</h3>
       <p>1499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -237,6 +228,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -253,6 +245,7 @@
   <script src="js/header.js"></script>
   <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
