--- a/shorts.html
+++ b/shorts.html
@@ -106,7 +106,6 @@
       </a>
       <h3><a href="productDetail.html?id=59"></a>Beyaz Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -116,7 +115,6 @@
       </a>
       <h3><a href="productDetail.html?id=60"></a> Mavi Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -126,7 +124,6 @@
       </a>
       <h3><a href="productDetail.html?id=61"></a>Bermuda Şort</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -136,7 +133,6 @@
       </a>
       <h3><a href="productDetail.html?id=62"></a>Beyaz Keten Şort </h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -146,7 +142,6 @@
       </a>
       <h3><a href="productDetail.html?id=63"></a>Yırtık Kot Şort</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -157,7 +152,6 @@
       </a>
       <h3><a href="productDetail.html?id=64"></a>Keten Şort</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -167,7 +161,6 @@
       </a>
       <h3><a href="productDetail.html?id=65"></a>Siyah Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -177,7 +170,6 @@
       </a>
       <h3><a href="productDetail.html?id=66"></a>Bordo Şort</h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -187,7 +179,6 @@
       </a>
       <h3><a href="productDetail.html?id=67"></a>Mavi Şort</h3>
       <p>349.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -197,7 +188,6 @@
       </a>
       <h3><a href="productDetail.html?id=68"></a>Keten Pudra Şort</h3>
       <p>399.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -238,6 +228,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -254,6 +245,7 @@
   <script src="js/header.js"></script>
   <script src="js/pants.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
