--- a/skirt.html
+++ b/skirt.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -108,7 +109,6 @@
       </a>
       <h3><a href="productDetail.html?id=69"></a>Katlı Mini Etek</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -118,7 +118,6 @@
       </a>
       <h3><a href="productDetail.html?id=70"></a> Uzun Yırtmaçlı Etek</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -128,7 +127,6 @@
       </a>
       <h3><a href="productDetail.html?id=71"></a>Kahve Deri Mini Etek </h3>
       <p>549.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -138,7 +136,6 @@
       </a>
       <h3><a href="productDetail.html?id=72"></a>Tüllü Mini Etek</h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -148,7 +145,6 @@
       </a>
       <h3><a href="productDetail.html?id=73"></a>Beyaz Mini Tül Etek</h3>
       <p>599.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -158,7 +154,6 @@
       </a>
       <h3><a href="productDetail.html?id=74"></a>Siyah Fırfırlı Mini Etek</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -168,7 +163,6 @@
       </a>
       <h3><a href="productDetail.html?id=75"></a>Mini Bordo Etek</h3>
       <p>399.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -178,7 +172,6 @@
       </a>
       <h3><a href="productDetail.html?id=76"></a>Mini Kot Etek</h3>
       <p>499.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -188,7 +181,6 @@
       </a>
       <h3><a href="productDetail.html?id=77"></a>Uzun Lacivert Etek</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -198,7 +190,6 @@
       </a>
       <h3><a href="productDetail.html?id=78"></a>Yeşil Pileli Etek</h3>
       <p>449.99 TL</p>
-      <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
@@ -239,6 +230,7 @@
                   <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                   <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="contact.html">Bize Ulaşın</a></li>
               </ul>
           </div>
       </aside>
@@ -256,6 +248,7 @@
   <script src="js/header.js"></script>
   <script src="js/pants.js"></script>
   <script src="js/user.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
