Üst giyim sayfaları güncellendi, bazı dosyalarda değşiklik yapıldı.

--- a/dress.html
+++ b/dress.html
@@ -201,8 +201,8 @@
 
   </section>
 
-   <!-- FOOTER BAŞLANGICI -->
-   <footer class="wd-footer footer-container color-scheme-light">
+  <!-- FOOTER BAŞLANGICI -->
+  <footer class="wd-footer footer-container color-scheme-light">
     <div class="container main-footer">
         <!-- Footer içeriği için grid yapı -->
         <aside class="footer-sidebar widget-area wd-grid-g"
@@ -228,7 +228,7 @@
             <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
                 <h5>Önemli Bilgiler</h5>
                 <ul>
-                    
+
                     <li><a href="Pd.html">Ödeme ve Teslimat</a></li>
                     <li><a href="Cookies.html">Çerez Politikamız</a></li>
                     <li><a href="DSA.html">Mesafeli Satış Sözleşmesi</a></li>
@@ -236,10 +236,26 @@
                     <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
                     <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
                     <li><a href="about.html">Hakkımızda</a></li>
+                    <li><a href="contact.html">Bize Ulaşın</a></li>
                 </ul>
             </div>
         </aside>
     </div>
+
+
+    <!-- SOSYAL MEDYA İKONLARI -->
+    <div class="footer-social">
+        <a href="https://www.instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="X">
+        </a>
+    </div>
+
 
     <!-- Telif Hakkı Bölümü -->
     <div class="copyrights">
