--- a/dress.html
+++ b/dress.html
@@ -66,39 +66,93 @@
 
                 <!-- SAĞ: HESAP MENÜ -->
                 <div class="hesap-menu">
+                    <!-- Arama Ikonu -->
                     <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
-                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+
+                    <!-- Kullanıcı Ikonu -->
+                    <div class="user-dropdown-container">
+                        <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                        <div id="userDropdown" class="dropdown-menu">
+                            <div id="dropdownName">Kullanıcı</div>
+                            <button id="logoutBtn">Çıkış Yap</button>
+                        </div>
+                    </div>
+
+
+                    <!-- Favoriler ve Sepet -->
                     <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
                     <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
+
+                    <!-- Kullanıcı Profili Dropdown'ı (Başlangıçta gizli) -->
+
                 </div>
+
+
 
             </div>
         </div>
     </div>
-<!------------ Giriş paneli (sidebar) --------------------->
-<div id="loginSidebar" class="sidebar">
-<button id="closeLogin" class="close-btn">×</button>
-<form id="loginForm">
-    <h2>Giriş Yap</h2>
-    <label for="email">E-posta:</label>
-    <input type="email" id="email" name="email" required>
+    <!-- Giriş paneli (sidebar) -->
+    <!-- Giriş paneli -->
+    <div id="loginSidebar" class="sidebar">
+        <button id="closeLogin" class="close-btn">×</button>
+        <form id="loginForm">
+            <h2>Giriş Yap</h2>
+            <label for="email">E-posta:</label>
+            <input type="email" id="email" name="email" required>
 
-    <label for="password">Şifre:</label>
-    <input type="password" id="password" name="password" required>
+            <label for="password">Şifre:</label>
+            <input type="password" id="password" name="password" required>
 
-    <button type="submit">Giriş</button>
-</form>
-</div>
+            <button type="submit">Giriş</button>
 
-<!-- Arama Kutusu Overlay -->
-<!-- Arama Kutusu Overlay -->
-<div class="search-overlay" id="searchOverlay">
-<div class="search-container">
-  <input type="text" placeholder="Ürün, kategori ara..." id="searchInput" />
-  <button id="closeSearch" aria-label="Kapat">×</button>
-</div>
-<div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
-</div>
+            <p style="margin-top:10px;">
+                Hesabınız yok mu?
+                <a href="#" id="openRegister">Kayıt Ol</a>
+            </p>
+        </form>
+    </div>
+
+    <!-- Kayıt paneli -->
+    <div id="registerSidebar" class="sidebar">
+        <button id="closeRegister" class="close-btn">×</button>
+        <form id="registerForm">
+            <h2>Kayıt Ol</h2>
+            <label for="newName">Ad Soyad:</label>
+            <input type="text" id="newName" name="newName" required>
+
+            <label for="newEmail">E-posta:</label>
+            <input type="email" id="newEmail" name="newEmail" required>
+
+            <label for="newPassword">Şifre:</label>
+            <input type="password" id="newPassword" name="newPassword" required>
+
+            <button type="submit">Kayıt Ol</button>
+
+            <p style="margin-top:10px;">
+                Zaten hesabınız var mı?
+                <a href="#" id="openLoginFromRegister">Giriş Yap</a>
+            </p>
+        </form>
+    </div>
+
+    <!-- Ortak Toast Mesajı -->
+    <div id="toast" class="toast" style="display: none;"></div>
+
+
+
+
+
+
+
+    <!-- Arama Kutusu Overlay -->
+    <div class="search-overlay" id="searchOverlay">
+        <div class="search-container">
+            <input type="text" placeholder="Ürün, kategori ara..." id="searchInput" />
+            <button id="closeSearch" aria-label="Kapat">×</button>
+        </div>
+        <div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
+    </div>
 
 
 
