alt giyim ve dış giyim güncellendi

--- a/coats.html
+++ b/coats.html
@@ -7,10 +7,9 @@
   <title>Kadın Mont&Kaban Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
-  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -63,15 +62,31 @@
 
               <!-- SAĞ: HESAP MENÜ -->
               <div class="hesap-menu">
-                  <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
-                  <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                  <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                  <a href="#"><img src="images/market.png" alt="Sepet" /></a>
-              </div>
+                <!-- Arama Ikonu -->
+                <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
+
+                <!-- Kullanıcı Ikonu -->
+                <div class="user-dropdown-container">
+                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                    <div id="userDropdown" class="dropdown-menu">
+                        <div id="dropdownName">Kullanıcı</div>
+                        <button id="logoutBtn">Çıkış Yap</button>
+                    </div>
+                </div>
+
+
+                <!-- Favoriler ve Sepet -->
+                <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
+
+                <!-- Kullanıcı Profili Dropdown'ı (Başlangıçta gizli) -->
+
+            </div>
             </div>
           </div>
       </div>
 <!------------ Giriş paneli (sidebar) --------------------->
+<!-- Giriş paneli -->
 <div id="loginSidebar" class="sidebar">
   <button id="closeLogin" class="close-btn">×</button>
   <form id="loginForm">
@@ -83,10 +98,40 @@
       <input type="password" id="password" name="password" required>
 
       <button type="submit">Giriş</button>
+
+      <p style="margin-top:10px;">
+          Hesabınız yok mu?
+          <a href="#" id="openRegister">Kayıt Ol</a>
+      </p>
   </form>
 </div>
 
-<!-- Arama Kutusu Overlay -->
+<!-- Kayıt paneli -->
+<div id="registerSidebar" class="sidebar">
+  <button id="closeRegister" class="close-btn">×</button>
+  <form id="registerForm">
+      <h2>Kayıt Ol</h2>
+      <label for="newName">Ad Soyad:</label>
+      <input type="text" id="newName" name="newName" required>
+
+      <label for="newEmail">E-posta:</label>
+      <input type="email" id="newEmail" name="newEmail" required>
+
+      <label for="newPassword">Şifre:</label>
+      <input type="password" id="newPassword" name="newPassword" required>
+
+      <button type="submit">Kayıt Ol</button>
+
+      <p style="margin-top:10px;">
+          Zaten hesabınız var mı?
+          <a href="#" id="openLoginFromRegister">Giriş Yap</a>
+      </p>
+  </form>
+</div>
+
+<!-- Ortak Toast Mesajı -->
+<div id="toast" class="toast" style="display: none;"></div>
+
 <!-- Arama Kutusu Overlay -->
 <div class="search-overlay" id="searchOverlay">
   <div class="search-container">
@@ -107,7 +152,7 @@
       </a>
       <h3><a href="productDetail.html?id=9"></a>Acı Kahve Kısa Kürk</h3>
       <p>1299.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="9">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
@@ -116,7 +161,7 @@
       </a>
       <h3><a href="productDetail.html?id=10"></a>Antrasit Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="10">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
@@ -125,7 +170,7 @@
       </a>
       <h3><a href="productDetail.html?id=11"></a>Bej Maxi Kaşe Kaban </h3>
       <p>1299.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="11">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
@@ -134,7 +179,7 @@
       </a>
       <h3><a href="productDetail.html?id=12"></a>Çizgili Kısa Kaban</h3>
       <p>1199.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="12">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
@@ -143,7 +188,7 @@
       </a>
       <h3><a href="productDetail.html?id=13"></a>Kahve Denim Detaylı Mont</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="13">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
@@ -152,7 +197,7 @@
       </a>
       <h3><a href="productDetail.html?id=14"></a>Kahve Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="14">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
@@ -161,7 +206,7 @@
       </a>
       <h3><a href="productDetail.html?id=15"></a>Kürklü Siyah Kaşe Kaban</h3>
       <p>1499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="15">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
@@ -170,7 +215,7 @@
       </a>
       <h3><a href="productDetail.html?id=16"></a>Siyah Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="16">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
@@ -179,16 +224,16 @@
       </a>
       <h3><a href="productDetail.html?id=17"></a>Taş Renk Bağlamalı Mont</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="17">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <a href="productDetail.html?id=18"><img src="images/urunler/coats/TasOrtaKürk.jpg" alt="Taş Renk Orta Boy Kürk">
+      <a href="productDetail.html?id=18"><img src="images/urunler/coats/TasOrtaKurk.jpg" alt="Taş Renk Orta Boy Kürk">
       </a>
       <h3><a href="productDetail.html?id=18"></a>Taş Renk Orta Boy Kürk</h3>
       <p>1499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="18">♥</button>
     </div>
 
 
@@ -234,6 +279,19 @@
       </aside>
   </div>
 
+  <!-- SOSYAL MEDYA İKONLARI -->
+  <div class="footer-social">
+    <a href="https://www.instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="images/twitter.png" alt="X">
+    </a>
+</div>
+
   <!-- Telif Hakkı Bölümü -->
   <div class="copyrights">
       <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
@@ -242,10 +300,12 @@
 </footer>
   <!-- FOOTER BİTİŞ -->
 
-  <script src="js/header.js"></script>
-  <script src="js/jackets.js"></script>
-  <script src="js/user.js"></script>
-  <script src="js/contact.js"></script>
+<script src="js/products.js"></script>
+<script src="js/shirts.js"></script>
+<script src="js/search.js"></script>
+<script src="js/header.js"></script>
+<script src="js/user.js"></script>
+
 
 </body>
 
