--- a/pants.html
+++ b/pants.html
@@ -7,10 +7,9 @@
   <title>Kadın Pantolon Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
-  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -63,15 +62,31 @@
 
               <!-- SAĞ: HESAP MENÜ -->
               <div class="hesap-menu">
-                  <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
-                  <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                  <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                  <a href="#"><img src="images/market.png" alt="Sepet" /></a>
-              </div>
+                <!-- Arama Ikonu -->
+                <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
+
+                <!-- Kullanıcı Ikonu -->
+                <div class="user-dropdown-container">
+                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                    <div id="userDropdown" class="dropdown-menu">
+                        <div id="dropdownName">Kullanıcı</div>
+                        <button id="logoutBtn">Çıkış Yap</button>
+                    </div>
+                </div>
+
+
+                <!-- Favoriler ve Sepet -->
+                <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
+
+                <!-- Kullanıcı Profili Dropdown'ı (Başlangıçta gizli) -->
+
+            </div>
             </div>
           </div>
       </div>
 <!------------ Giriş paneli (sidebar) --------------------->
+<!-- Giriş paneli -->
 <div id="loginSidebar" class="sidebar">
   <button id="closeLogin" class="close-btn">×</button>
   <form id="loginForm">
@@ -83,10 +98,40 @@
       <input type="password" id="password" name="password" required>
 
       <button type="submit">Giriş</button>
+
+      <p style="margin-top:10px;">
+          Hesabınız yok mu?
+          <a href="#" id="openRegister">Kayıt Ol</a>
+      </p>
   </form>
 </div>
 
-<!-- Arama Kutusu Overlay -->
+<!-- Kayıt paneli -->
+<div id="registerSidebar" class="sidebar">
+  <button id="closeRegister" class="close-btn">×</button>
+  <form id="registerForm">
+      <h2>Kayıt Ol</h2>
+      <label for="newName">Ad Soyad:</label>
+      <input type="text" id="newName" name="newName" required>
+
+      <label for="newEmail">E-posta:</label>
+      <input type="email" id="newEmail" name="newEmail" required>
+
+      <label for="newPassword">Şifre:</label>
+      <input type="password" id="newPassword" name="newPassword" required>
+
+      <button type="submit">Kayıt Ol</button>
+
+      <p style="margin-top:10px;">
+          Zaten hesabınız var mı?
+          <a href="#" id="openLoginFromRegister">Giriş Yap</a>
+      </p>
+  </form>
+</div>
+
+<!-- Ortak Toast Mesajı -->
+<div id="toast" class="toast" style="display: none;"></div>
+
 <!-- Arama Kutusu Overlay -->
 <div class="search-overlay" id="searchOverlay">
   <div class="search-container">
@@ -108,7 +153,7 @@
       </a>
       <h3><a href="productDetail.html?id=39"></a>Çizgili Kumaş Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="39">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
@@ -117,7 +162,7 @@
       </a>
       <h3><a href="productDetail.html?id=40"></a> Beyaz Keten Pantolon</h3>
       <p>499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="40">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
@@ -126,7 +171,7 @@
       </a>
       <h3><a href="productDetail.html?id=41"></a>Pembe Kumaş Pantolon </h3>
       <p>549.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="41">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
@@ -135,7 +180,7 @@
       </a>
       <h3><a href="productDetail.html?id=42"></a>Kahve Palazzo Pantolon</h3>
       <p>549.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="42">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
@@ -144,7 +189,7 @@
       </a>
       <h3><a href="productDetail.html?id=43"></a>Leopar Desenli Jean</h3>
       <p>599.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="43">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
@@ -153,7 +198,7 @@
       </a>
       <h3><a href="productDetail.html?id=44"></a>Deri Pantolon</h3>
       <p>599.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="44">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
@@ -162,7 +207,7 @@
       </a>
       <h3><a href="productDetail.html?id=45"></a>Eskitme Wide Jean</h3>
       <p>499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="45">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
@@ -171,7 +216,7 @@
       </a>
       <h3><a href="productDetail.html?id=46"></a>İspanyol Paça Beyaz Jean</h3>
       <p>499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="46">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
@@ -180,7 +225,7 @@
       </a>
       <h3><a href="productDetail.html?id=47"></a>Pudra Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="47">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
@@ -189,7 +234,7 @@
       </a>
       <h3><a href="productDetail.html?id=48"></a>Antrasit Pantolon</h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="48">♥</button>
     </div>
 
 
@@ -235,6 +280,19 @@
       </aside>
   </div>
 
+  <!-- SOSYAL MEDYA İKONLARI -->
+  <div class="footer-social">
+    <a href="https://www.instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="images/twitter.png" alt="X">
+    </a>
+</div>
+
   <!-- Telif Hakkı Bölümü -->
   <div class="copyrights">
       <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
@@ -243,10 +301,12 @@
 </footer>
   <!-- FOOTER BİTİŞ -->
 
-  <script src="js/header.js"></script>
-  <script src="js/pants.js"></script>
-  <script src="js/user.js"></script>
-  <script src="js/contact.js"></script>
+<script src="js/products.js"></script>
+<script src="js/shirts.js"></script>
+<script src="js/search.js"></script>
+<script src="js/header.js"></script>
+<script src="js/user.js"></script>
+
 
 </body>
 
