--- a/shorts.html
+++ b/shorts.html
@@ -7,8 +7,8 @@
   <title>Kadın Şort Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
 
 </head>
@@ -62,15 +62,31 @@
 
               <!-- SAĞ: HESAP MENÜ -->
               <div class="hesap-menu">
-                  <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
-                  <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                  <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                  <a href="#"><img src="images/market.png" alt="Sepet" /></a>
-              </div>
+                <!-- Arama Ikonu -->
+                <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
+
+                <!-- Kullanıcı Ikonu -->
+                <div class="user-dropdown-container">
+                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                    <div id="userDropdown" class="dropdown-menu">
+                        <div id="dropdownName">Kullanıcı</div>
+                        <button id="logoutBtn">Çıkış Yap</button>
+                    </div>
+                </div>
+
+
+                <!-- Favoriler ve Sepet -->
+                <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
+
+                <!-- Kullanıcı Profili Dropdown'ı (Başlangıçta gizli) -->
+
+            </div>
             </div>
           </div>
       </div>
 <!------------ Giriş paneli (sidebar) --------------------->
+<!-- Giriş paneli -->
 <div id="loginSidebar" class="sidebar">
   <button id="closeLogin" class="close-btn">×</button>
   <form id="loginForm">
@@ -82,10 +98,40 @@
       <input type="password" id="password" name="password" required>
 
       <button type="submit">Giriş</button>
+
+      <p style="margin-top:10px;">
+          Hesabınız yok mu?
+          <a href="#" id="openRegister">Kayıt Ol</a>
+      </p>
   </form>
 </div>
 
-<!-- Arama Kutusu Overlay -->
+<!-- Kayıt paneli -->
+<div id="registerSidebar" class="sidebar">
+  <button id="closeRegister" class="close-btn">×</button>
+  <form id="registerForm">
+      <h2>Kayıt Ol</h2>
+      <label for="newName">Ad Soyad:</label>
+      <input type="text" id="newName" name="newName" required>
+
+      <label for="newEmail">E-posta:</label>
+      <input type="email" id="newEmail" name="newEmail" required>
+
+      <label for="newPassword">Şifre:</label>
+      <input type="password" id="newPassword" name="newPassword" required>
+
+      <button type="submit">Kayıt Ol</button>
+
+      <p style="margin-top:10px;">
+          Zaten hesabınız var mı?
+          <a href="#" id="openLoginFromRegister">Giriş Yap</a>
+      </p>
+  </form>
+</div>
+
+<!-- Ortak Toast Mesajı -->
+<div id="toast" class="toast" style="display: none;"></div>
+
 <!-- Arama Kutusu Overlay -->
 <div class="search-overlay" id="searchOverlay">
   <div class="search-container">
@@ -95,6 +141,7 @@
   <div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
 </div>
 </header>
+              
   <!-- HEADER BİTİŞ -->
 
   <!-- ANA İÇERİK: Şort Ürünleri -->
@@ -106,7 +153,7 @@
       </a>
       <h3><a href="productDetail.html?id=59"></a>Beyaz Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="59">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
@@ -115,7 +162,7 @@
       </a>
       <h3><a href="productDetail.html?id=60"></a> Mavi Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="60">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
@@ -124,7 +171,7 @@
       </a>
       <h3><a href="productDetail.html?id=61"></a>Bermuda Şort</h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="61">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
@@ -133,7 +180,7 @@
       </a>
       <h3><a href="productDetail.html?id=62"></a>Beyaz Keten Şort </h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="62">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
@@ -142,7 +189,7 @@
       </a>
       <h3><a href="productDetail.html?id=63"></a>Yırtık Kot Şort</h3>
       <p>449.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="63">♥</button>
     </div>
 
     
@@ -152,7 +199,7 @@
       </a>
       <h3><a href="productDetail.html?id=64"></a>Keten Şort</h3>
       <p>499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="64">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
@@ -161,7 +208,7 @@
       </a>
       <h3><a href="productDetail.html?id=65"></a>Siyah Kot Şort</h3>
       <p>399.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="65">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
@@ -170,7 +217,7 @@
       </a>
       <h3><a href="productDetail.html?id=66"></a>Bordo Şort</h3>
       <p>349.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="66">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
@@ -179,7 +226,7 @@
       </a>
       <h3><a href="productDetail.html?id=67"></a>Mavi Şort</h3>
       <p>349.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="67">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
@@ -188,7 +235,7 @@
       </a>
       <h3><a href="productDetail.html?id=68"></a>Keten Pudra Şort</h3>
       <p>399.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="68">♥</button>
     </div>
 
 
@@ -234,6 +281,19 @@
       </aside>
   </div>
 
+  <!-- SOSYAL MEDYA İKONLARI -->
+  <div class="footer-social">
+    <a href="https://www.instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="images/twitter.png" alt="X">
+    </a>
+</div>
+
   <!-- Telif Hakkı Bölümü -->
   <div class="copyrights">
       <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
@@ -242,10 +302,12 @@
 </footer>
   <!-- FOOTER BİTİŞ -->
 
-  <script src="js/header.js"></script>
-  <script src="js/pants.js"></script>
-  <script src="js/user.js"></script>
-  <script src="js/contact.js"></script>
+<script src="js/products.js"></script>
+<script src="js/shirts.js"></script>
+<script src="js/search.js"></script>
+<script src="js/header.js"></script>
+<script src="js/user.js"></script>
+
 
 </body>
 
