--- a/trenchcoats.html
+++ b/trenchcoats.html
@@ -6,10 +6,9 @@
   <title>Kadın Trençkot Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
-  <link rel="stylesheet" href="css/contact.css" />
 
 </head>
 
@@ -62,15 +61,31 @@
 
               <!-- SAĞ: HESAP MENÜ -->
               <div class="hesap-menu">
-                  <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
-                  <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                  <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
-                  <a href="#"><img src="images/market.png" alt="Sepet" /></a>
-              </div>
+                <!-- Arama Ikonu -->
+                <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
+
+                <!-- Kullanıcı Ikonu -->
+                <div class="user-dropdown-container">
+                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                    <div id="userDropdown" class="dropdown-menu">
+                        <div id="dropdownName">Kullanıcı</div>
+                        <button id="logoutBtn">Çıkış Yap</button>
+                    </div>
+                </div>
+
+
+                <!-- Favoriler ve Sepet -->
+                <a href="wishlist.html"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                <a href="addCart.html"><img src="images/market.png" alt="Sepet" /></a>
+
+                <!-- Kullanıcı Profili Dropdown'ı (Başlangıçta gizli) -->
+
+            </div>
             </div>
           </div>
       </div>
 <!------------ Giriş paneli (sidebar) --------------------->
+<!-- Giriş paneli -->
 <div id="loginSidebar" class="sidebar">
   <button id="closeLogin" class="close-btn">×</button>
   <form id="loginForm">
@@ -82,10 +97,40 @@
       <input type="password" id="password" name="password" required>
 
       <button type="submit">Giriş</button>
+
+      <p style="margin-top:10px;">
+          Hesabınız yok mu?
+          <a href="#" id="openRegister">Kayıt Ol</a>
+      </p>
   </form>
 </div>
 
-<!-- Arama Kutusu Overlay -->
+<!-- Kayıt paneli -->
+<div id="registerSidebar" class="sidebar">
+  <button id="closeRegister" class="close-btn">×</button>
+  <form id="registerForm">
+      <h2>Kayıt Ol</h2>
+      <label for="newName">Ad Soyad:</label>
+      <input type="text" id="newName" name="newName" required>
+
+      <label for="newEmail">E-posta:</label>
+      <input type="email" id="newEmail" name="newEmail" required>
+
+      <label for="newPassword">Şifre:</label>
+      <input type="password" id="newPassword" name="newPassword" required>
+
+      <button type="submit">Kayıt Ol</button>
+
+      <p style="margin-top:10px;">
+          Zaten hesabınız var mı?
+          <a href="#" id="openLoginFromRegister">Giriş Yap</a>
+      </p>
+  </form>
+</div>
+
+<!-- Ortak Toast Mesajı -->
+<div id="toast" class="toast" style="display: none;"></div>
+
 <!-- Arama Kutusu Overlay -->
 <div class="search-overlay" id="searchOverlay">
   <div class="search-container">
@@ -95,6 +140,8 @@
   <div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
 </div>
 </header>
+              
+              
   <!-- HEADER BİTİŞ -->
 
   <!-- ANA İÇERİK: Trençkot Ürünleri -->
@@ -106,7 +153,7 @@
       <a href=""></a>
       <h3><a href="productDetail.html?id=79"></a>Antrasit Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="79">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
@@ -115,7 +162,7 @@
       </a>
       <h3><a href="productDetail.html?id=80"></a> Bej Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="80">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
@@ -124,7 +171,7 @@
       </a>
       <h3><a href="productDetail.html?id=81"></a>Deri Maxi Trençkot </h3>
       <p>1499.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="81">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
@@ -133,7 +180,7 @@
       </a>
       <h3><a href="productDetail.html?id=82"></a>Haki Maxi Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="82">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
@@ -142,7 +189,7 @@
       </a>
       <h3><a href="productDetail.html?id=83"></a>Antrasit Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="83">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
@@ -151,7 +198,7 @@
       </a>
       <h3><a href="productDetail.html?id=84"></a>Bordo Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="84">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
@@ -160,7 +207,7 @@
       </a>
       <h3><a href="productDetail.html?id=85"></a>Orta Boy Denim Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="85">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
@@ -169,7 +216,7 @@
       </a>
       <h3><a href="productDetail.html?id=86"></a>Orta Boy Deri Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="86">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
@@ -178,7 +225,7 @@
       </a>
       <h3><a href="productDetail.html?id=87"></a>Haki Orta Boy Trençkot</h3>
       <p>999.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="87">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
@@ -187,7 +234,7 @@
       </a>
       <h3><a href="productDetail.html?id=88"></a>Lacivert Crop Trençkot</h3>
       <p>699.99 TL</p>
-      <button class="favorite-icon">♥</button>
+      <button class="favorite-icon" data-id="88">♥</button>
     </div>
 
 
@@ -233,6 +280,19 @@
       </aside>
   </div>
 
+  <!-- SOSYAL MEDYA İKONLARI -->
+  <div class="footer-social">
+    <a href="https://www.instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="images/twitter.png" alt="X">
+    </a>
+</div>
+
   <!-- Telif Hakkı Bölümü -->
   <div class="copyrights">
       <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
@@ -241,10 +301,12 @@
 </footer>
   <!-- FOOTER BİTİŞ -->
 
-  <script src="js/header.js"></script>
-  <script src="js/jackets.js"></script>
-  <script src="js/user.js"></script>
-  <script src="js/contact.js"></script>
+<script src="js/products.js"></script>
+<script src="js/shirts.js"></script>
+<script src="js/search.js"></script>
+<script src="js/header.js"></script>
+<script src="js/user.js"></script>
+
 
 </body>
 
